# LinguisticDataCore-LV0

./: .gitignore  README.md  ReadMe.txt  pyproject.toml
data/raw/: README.md
docs/: ARABIC_FIELDS.md  PIPELINE_MODERNIZATION_REVIEW.md  PIPELINE_UPGRADE_PLAN.md  PROGRESS_LOG.md  RAW_DATA_FLOW.md  ROADMAP.md  SCHEMA_LV0_7.md  SESSION_START.md
outputs/: README.md
scripts/: setup_raw_links.ps1
scripts/ingest/: align_arabic_samples.py  anchor_kpi.py  buckwalter_to_ipa.py  build_arabic_binary_root_lexicon.py  build_processed_manifest.py  build_processed_samples.py  clean_word_root_map.py  convert_stardict.py  english_pos_fallback.py  enrich_concepts.py  enrich_english_pos.py  enrich_quran_ipa.py  enrich_quran_translit.py  enrich_stardict_latin_greek.py  fetch_processed_release.py  filter_stardict.py  ingest_arabic_hf_roots.py  ingest_arabic_word_root_map.py  ingest_cmudict_ipa.py  ingest_english_ipa.py  ingest_quran_morphology.py  kpi_processed.py  match_preview.py  merge_arabic_classical_lexemes.py  merge_english_ipa_sources.py  merge_quranic_arabic_lexemes.py  normalize_stardict.py  package_processed_release.py  processed_schema.py  processed_schema_lv2.py  run_adapters.py  run_ingest_all.py  split_processed_jsonl.py  validate_ingest.py  validate_processed.py  validate_sample.py
src/embeddings/: embed_canine.py  embed_sonar.py
src/features/: build_text_fields.py
src/index/: build_faiss.py
src/ingest/: __init__.py  utils.py
src/linguistic_data_core/: cli.py  validation.py
src/tools/: apply_text_fields.py  gen_manifest.py  search_index.py
(+11 files in other folders)
